# Personal-Health-Coach

./: LICENSE  Personal Health Coach.docx  README.md  demo.py  pyproject.toml
data/store/: _index.json
data/store/demo_user/wellness/activities/: 20260213_121207_2242667174224  20260213_121257_2581273515888  20260214_121207_2242667171584  20260214_121257_2581273513168  20260215_121207_2242667171664  20260215_121257_2581273513248  20260215_122212_2493153847536
data/store/demo_user/wellness/symptoms/: 20260215_121207_2242667171984  20260215_121257_2581273513568  20260215_122257_2493154495376
data/store/demo_user/wellness/vitals/: 20260215_121207_2242667171264  20260215_121207_2242667171744  20260215_121257_2581273512848  20260215_121257_2581273513328  20260215_122125_2493148425632
src/health_monitoring_agent/: __init__.py  compression.py  data_store.py  export_manager.py  main.py  models.py  privacy.py  recommendation_engine.py  ui.py  wellness_tracker.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_recommendation_engine.py
