[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-monitoring-agent"
version = "0.1.0"
description = "A lightweight health monitoring agent that compresses medical history and wellness data"
requires-python = ">=3.9"
dependencies = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
